--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,41 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: Mojitobar's blog
+description: 개발과 데이터, 그리고 일상에 대한 기록
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+#### 👨‍💻 경력
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+- **데이터 엔지니어** [@Market Fit Lab Solutions](https://www.mfitlab.com/solutions) (2024.08 ~ 현재)
+  - Mixpanel, Moengage 등 데이터 분석 및 마케팅 자동화
+- **소프트웨어 엔지니어** [@F-Lab & Company](https://f-lab.kr/) (2022.08 ~ 2023.09)
+  - 자동화 및 소프트웨어 개발
+
+---
+
+#### 📄 최근 글
+
+<div className="recent-posts">
+  <a className="recent-post" href="/tech/data-engineering/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">데이터 엔지니어링 시작하기</div>
+      <div className="recent-post-meta">2024년 3월 20일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        데이터 엔지니어링이란 무엇이고, 어떻게 시작할 수 있는지 실무 경험을 바탕으로 정리합니다.
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
+
+  <a className="recent-post" href="/tech/data-engineering/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">데이터 엔지니어링 시작하기</div>
+      <div className="recent-post-meta">2024년 3월 20일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        데이터 엔지니어링이란 무엇이고, 어떻게 시작할 수 있는지 실무 경험을 바탕으로 정리합니다.
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
+</div>
