--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -19,21 +19,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <div className="recent-posts">
   <a className="recent-post" href="/tech/data-engineering/">
     <div className="recent-post-content">
-      <div className="recent-post-title">데이터 엔지니어링 시작하기</div>
-      <div className="recent-post-meta">2024년 3월 20일 · Data Engineering</div>
+      <div className="recent-post-title">ETL vs ELT</div>
+      <div className="recent-post-meta">2025년 5월 15일 · Data Engineering</div>
       <div className="recent-post-desc">
-        데이터 엔지니어링이란 무엇이고, 어떻게 시작할 수 있는지 실무 경험을 바탕으로 정리합니다.
-      </div>
-      <div className="recent-post-action">글 읽기 →</div>
-    </div>
-  </a>
-
-  <a className="recent-post" href="/tech/data-engineering/">
-    <div className="recent-post-content">
-      <div className="recent-post-title">데이터 엔지니어링 시작하기</div>
-      <div className="recent-post-meta">2024년 3월 20일 · Data Engineering</div>
-      <div className="recent-post-desc">
-        데이터 엔지니어링이란 무엇이고, 어떻게 시작할 수 있는지 실무 경험을 바탕으로 정리합니다.
+        ETL과 ELT의 차이점을 상세히 비교하고 상황별 최적의 선택을 돕습니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
