--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -153,3 +153,10 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
 예를 들어, 초기 데이터 수집 및 일부 정제는 ELT 방식으로 빠르게 처리하고, 특정 분석을 위한 복잡한 데이터 모델링이나 집계는 데이터 웨어하우스 내에서 추가적인 변환(Transform)을 수행하는 형태(`ELTL`)도 가능합니다.
 
 중요한 것은 특정 용어나 기술에 얽매이지 않고, **비즈니스 목표**, **데이터 특성**, 사용 가능한 **기술 스택** 및 **예산** 등 구체적인 상황과 요구사항을 종합적으로 고려하여 **가장 적합한 데이터 처리 전략을 유연하게 설계하고 발전**시켜 나가는 것입니다.
+
+## 📚 참고 자료
+
+- [What is the Difference Between ETL and ELT?](https://rivery.io/blog/etl-vs-elt/)
+- [ETL vs ELT - Databricks](https://www.databricks.com/discover/etl/vs-elt)
+- [ETL vs ELT - Snowflake](https://www.snowflake.com/guides/etl-vs-elt/)
+- [ETL vs ELT - AWS](https://aws.amazon.com/ko/compare/the-difference-between-etl-and-elt/)
