--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,7 +17,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 📄 최근 글
 
 <div className="recent-posts">
-  <a className="recent-post" href="/tech/data-engineering/">
+  <a className="recent-post" href="/de-wiki/etl_vs_elt/">
     <div className="recent-post-content">
       <div className="recent-post-title">ETL vs ELT</div>
       <div className="recent-post-meta">2025년 5월 15일 · Data Engineering</div>
