google search console setting

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,6 +17,16 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 📄 최근 글
 
 <div className="recent-posts">
+  <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">정규화와 비정규화</div>
+      <div className="recent-post-meta">2025년 5월 16일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        데이터 모델링에서 정규화와 비정규화에 대해 알아보고 각 상황에서의 설계 결졍을 돕습니다.
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
   <a className="recent-post" href="/de-wiki/etl_vs_elt/">
     <div className="recent-post-content">
       <div className="recent-post-title">ETL vs ELT</div>
