--- a/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
+++ b/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
@@ -11,6 +11,8 @@ import NormalizationExampleTable from '../../../components/NormalizationExampleT
 **정규화(Normalization)** 는 데이터 중복을 최소화하고 일관성을 확보하는 데이터베이스 구조화 기법입니다. 반면, **비정규화(Denormalization)** 는 읽기 성능을 높이기 위해 의도적으로 데이터 중복을 허용하는 전략입니다. 각 방식은 데이터 무결성, 성능, 관리 복잡성 등에서 서로 다른 장단점을 가지므로, 시스템의 특성과 요구사항을 정확히 파악하고 적절한 균형을 찾는 것이 중요합니다. 이 글은 두 기법을 심층 비교하여 최적의 설계 결정을 돕습니다.
 :::
 
+![normalization-denormalization](/images/normalization-denormalization.png)
+
 데이터베이스를 설계할 때 '정규화'와 '비정규화'라는 용어를 자주 접하게 됩니다. 
 
 이 두 가지는 데이터를 구성하고 관리하는 상반된 접근 방식으로, 시스템의 성능, 데이터 무결성, 유지보수 용이성에 큰 영향을 미칩니다. 
