og image change

--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -2,7 +2,7 @@
 title: 'ETL vs ELT: 핵심 차이점과 올바른 선택 가이드'
 description: '데이터 파이프라인의 두 가지 주요 접근 방식인 ETL과 ELT를 심층 비교하고, 상황에 맞는 최적의 선택을 위한 가이드라인을 제공합니다.'
 pubDate: '2025-05-15'
-heroImage: '/images/etl-elt-flow.png'
+heroImage: 'https://mojito-tech-blog.vercel.app/images/etl-elt-flow.png'
 tableOfContents:
   minHeadingLevel: 2
   maxHeadingLevel: 3
