--- a/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
+++ b/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
@@ -2,7 +2,10 @@
 title: '데이터 정규화 vs 비정규화: 핵심 가이드'
 description: '데이터베이스 설계의 핵심, 정규화와 비정규화를 비교 분석하고 상황에 맞는 최적의 선택을 안내합니다. 주요 개념, 장단점, 사용 사례를 자세히 알아보세요.'
 pubDate: '2025-05-20' # 실제 발행일에 맞춰 수정해주세요.
-heroImage: 'https://mojito-tech-blog.vercel.app/images/normalization-denormalization.png' # 전체 URL로 수정
+hero:
+  image:
+    file: '/images/normalization-denormalization.png'
+    alt: '데이터 정규화와 비정규화 비교 다이어그램'
 ---
 import ComparisonTable from '../../../components/ComparisonTable.astro';
 import NormalizationExampleTable from '../../../components/NormalizationExampleTable.astro';
