og image change

--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -6,9 +6,11 @@ hero:
   image:
     file: '/images/etl-elt-flow.png'
     alt: 'ETL과 ELT 프로세스 흐름도'
-tableOfContents:
-  minHeadingLevel: 2
-  maxHeadingLevel: 3
+head:
+  - tag: meta
+    attrs:
+      property: og:image
+      content: /images/etl-elt-flow.png
 ---
 import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 import ComparisonTable from '../../../components/ComparisonTable.astro';
