--- a/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
+++ b/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
@@ -6,6 +6,11 @@ hero:
   image:
     file: '/images/normalization-denormalization.png'
     alt: '데이터 정규화와 비정규화 비교 다이어그램'
+head:
+  - tag: meta
+    attrs:
+      property: og:image
+      content: /images/normalization-denormalization.png
 ---
 import ComparisonTable from '../../../components/ComparisonTable.astro';
 import NormalizationExampleTable from '../../../components/NormalizationExampleTable.astro';
