og image change

--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -4,13 +4,13 @@ description: '데이터 파이프라인의 두 가지 주요 접근 방식인 ET
 pubDate: '2025-05-15'
 hero:
   image:
-    file: '/images/etl-elt-flow.png'
+    file: 'https://mojito-tech-blog.vercel.app/images/etl-elt-flow.png'
     alt: 'ETL과 ELT 프로세스 흐름도'
 head:
   - tag: meta
     attrs:
       property: og:image
-      content: /images/etl-elt-flow.png
+      content: https://mojito-tech-blog.vercel.app/images/etl-elt-flow.png
 ---
 import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 import ComparisonTable from '../../../components/ComparisonTable.astro';
