--- a/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
+++ b/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
@@ -4,13 +4,13 @@ description: '데이터베이스 설계의 핵심, 정규화와 비정규화를 
 pubDate: '2025-05-20' # 실제 발행일에 맞춰 수정해주세요.
 hero:
   image:
-    file: '/images/normalization-denormalization.png'
+    file: 'https://mojito-tech-blog.vercel.app/images/images/normalization-denormalization.png'
     alt: '데이터 정규화와 비정규화 비교 다이어그램'
 head:
   - tag: meta
     attrs:
       property: og:image
-      content: /images/normalization-denormalization.png
+      content: https://mojito-tech-blog.vercel.app/images/images/normalization-denormalization.png
 ---
 import ComparisonTable from '../../../components/ComparisonTable.astro';
 import NormalizationExampleTable from '../../../components/NormalizationExampleTable.astro';
