add blog thumbnail

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,11 @@
 ---
 title: Mojitobar's blog
-description: 개발과 데이터, 그리고 일상에 대한 기록
+description: 데이터와 개발에 대한 기록
+head:
+  - tag: meta
+    attrs:
+      property: og:image
+      content: https://mojito-tech-blog.vercel.app/images/blogImage.png
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
