--- a/src/content/docs/de-wiki/scd.mdx
+++ b/src/content/docs/de-wiki/scd.mdx
@@ -5,14 +5,14 @@ head:
   - tag: meta
     attrs:
       property: og:image
-      content: https://mojito-tech-blog.vercel.app/images/scd.png # 예시 이미지 경로
+      content: https://mojito-tech-blog.vercel.app/images/scd.png
 ---
 import ComparisonTable from '../../../components/ComparisonTable.astro';
 import ReadingTimeInfo from '../../../components/ReadingTimeInfo.astro';
 import NormalizationExampleTable from '../../../components/NormalizationExampleTable.astro';
 import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 
-<ReadingTimeInfo minutesRead="10 min read" date="2025-05-24"/>
+<ReadingTimeInfo minutesRead="9 min read" date="2025-05-20"/>
 
 :::tip[핵심 요약]
 **느린 변경 차원(Slowly Changing Dimension, SCD)** 은 데이터 웨어하우스에서 시간의 흐름에 따라 변하는 차원 데이터의 이력을 관리하는 핵심 기법입니다. 
