--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -13,31 +13,32 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 👨‍💻 경력
 
 - **데이터 엔지니어** [@Market Fit Lab Solutions](https://www.mfitlab.com/solutions) (2024.08 ~ 현재)
-  - Mixpanel, Moengage 등 데이터 분석 및 마케팅 자동화
+  - 데이터 수집 및 분석 자동화를 위한 파이프라인을 설계하고 유지보수하며, SQL 및 Python을 활용해 다양한 지표를 정제·가공하고 있습니다.
+  - 기술 문서 작성과 내부 기술 공유를 통해 협업 효율을 높이고 있습니다.
 - **소프트웨어 엔지니어** [@F-Lab & Company](https://f-lab.kr/) (2022.08 ~ 2023.09)
-  - 자동화 및 소프트웨어 개발
-
+  - 백엔드와 프론트엔드 전반에서 자동화 및 시스템 고도화를 담당하고 있으며, 슬랙 API 및 다양한 스크립트를 활용해 운영 효율을 개선했습니다.
+  - 코드베이스 통합과 유지보수 체계 개선을 통해 개발팀 내 협업 품질 향상에 기여했습니다.
 ---
 
 #### 📄 최근 글
 
 <div className="recent-posts">
-  <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
+  <a className="recent-post" href="/de-wiki/etl_vs_elt/">
     <div className="recent-post-content">
-      <div className="recent-post-title">정규화와 비정규화</div>
-      <div className="recent-post-meta">2025년 5월 16일 · Data Engineering</div>
+      <div className="recent-post-title">느린 변경 차원(SCD)</div>
+      <div className="recent-post-meta">2025년 5월 20일 · Data Engineering</div>
       <div className="recent-post-desc">
-        데이터 모델링에서 정규화와 비정규화에 대해 알아보고 각 상황에서의 설계 결졍을 돕습니다.
+        느린 변경 차원(SCD)의 핵심 개념, 다양한 유형(Type 0, 1, 2, 3, 4, 5, 6, 7), 장단점, 선택 기준, 그리고 실제 활용 사례까지 심층적으로 알아봅니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
   </a>
-  <a className="recent-post" href="/de-wiki/etl_vs_elt/">
+  <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
     <div className="recent-post-content">
-      <div className="recent-post-title">ETL vs ELT</div>
-      <div className="recent-post-meta">2025년 5월 15일 · Data Engineering</div>
+      <div className="recent-post-title">SQL 윈도우 함수</div>
+      <div className="recent-post-meta">2025년 5월 19일 · Data Engineering</div>
       <div className="recent-post-desc">
-        ETL과 ELT의 차이점을 상세히 비교하고 상황별 최적의 선택을 돕습니다.
+        SQL 윈도우 함수의 핵심 개념, 주요 함수 유형과 활용법, 그리고 성능을 고려한 사용 전략까지 상세히 안내합니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
