--- a/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
+++ b/src/content/docs/de-wiki/normalization_denormalization_guide.mdx
@@ -231,7 +231,7 @@ import ReadingTimeInfo from '../../../components/ReadingTimeInfo.astro';
 *   **데이터 불일치 위험**: 중복된 데이터 중 일부만 수정될 경우 데이터 일관성이 깨질 수 있습니다.
 *   **쓰기 성능 저하 및 유지보수 복잡성 증가**: 데이터 삽입, 수정, 삭제 시 중복된 모든 데이터를 일관성 있게 관리해야 하므로 작업이 복잡해지고 성능이 저하될 수 있습니다.
 
-## 📊 정규화 vs 비정규화: 핵심 비교
+## 정규화 vs 비정규화: 핵심 비교
 
 <ComparisonTable
   title="정규화 vs 비정규화: 핵심 비교"
@@ -286,7 +286,7 @@ import ReadingTimeInfo from '../../../components/ReadingTimeInfo.astro';
   ]}
 />
 
-## 🤔 언제, 어떤 방식을 선택해야 할까요?
+## 언제, 어떤 방식을 선택해야 할까요?
 
 정규화와 비정규화 중 어느 것이 절대적으로 우월하다고 말할 수는 없습니다. 시스템의 목적과 특성, 데이터의 활용 방식에 따라 적절한 전략을 선택해야 합니다.
 
@@ -323,7 +323,7 @@ import ReadingTimeInfo from '../../../components/ReadingTimeInfo.astro';
 *   **성능 요구사항**: 응답 속도, 동시 사용자 수 등
 *   **개발 및 유지보수 비용**: 관리의 복잡성, 개발 생산성 등
 
-## 🏁 결론
+## 결론
 
 정규화는 데이터의 일관성과 무결성을 지키는 강력한 원칙이며, 비정규화는 특정 상황에서 성능을 극대화하는 효과적인 전략입니다. 
 
