--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -59,7 +59,7 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
 *   **변환 시 컴퓨팅 비용**: 데이터 웨어하우스 내부에서 변환 작업이 수행되므로, 사용한 컴퓨팅 자원에 따라 비용이 발생할 수 있습니다. 변환 로직이 복잡하거나 데이터 양이 매우 클 경우 비용이 증가할 수 있습니다.
 *   **데이터 모델링의 중요성**: 데이터 모델링에 대한 이해 없이 무분별하게 데이터를 적재하면, 추후 변환 과정이 매우 복잡해지고 비효율적일 수 있습니다. `dbt (data build tool)`와 같은 도구를 활용하여 데이터 웨어하우스 내 변환 로직을 체계적으로 모델링하고 관리하는 것이 중요합니다.
 
-## 📊 주요 항목별 비교: ETL vs ELT
+## 주요 항목별 비교: ETL vs ELT
 
 <ComparisonTable
   title="ETL vs ELT 핵심 비교"
@@ -124,7 +124,7 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
   ]}
 />
 
-## 🤔 어떤 방식을 선택해야 할까요?
+## 어떤 방식을 선택해야 할까요?
 
 <ChoiceCardGrid>
   <div slot="choiceOne" class="choice-card etl-card">
@@ -151,17 +151,10 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
   </div>
 </ChoiceCardGrid>
 
-## 🏁 결론
+## 결론
 
 현실의 데이터 파이프라인은 ETL 또는 ELT 중 하나의 방식만을 고수하기보다는, 두 가지를 혼합한 **하이브리드 형태**로 구성되는 경우가 많습니다.
 
 예를 들어, 초기 데이터 수집 및 일부 정제는 ELT 방식으로 빠르게 처리하고, 특정 분석을 위한 복잡한 데이터 모델링이나 집계는 데이터 웨어하우스 내에서 추가적인 변환(Transform)을 수행하는 형태(`ELTL`)도 가능합니다.
 
 중요한 것은 특정 용어나 기술에 얽매이지 않고, **비즈니스 목표**, **데이터 특성**, 사용 가능한 **기술 스택** 및 **예산** 등 구체적인 상황과 요구사항을 종합적으로 고려하여 **가장 적합한 데이터 처리 전략을 유연하게 설계하고 발전**시켜 나가는 것입니다.
-
-## 📚 참고 자료
-
-- [What is the Difference Between ETL and ELT?](https://rivery.io/blog/etl-vs-elt/)
-- [ETL vs ELT - Databricks](https://www.databricks.com/discover/etl/vs-elt)
-- [ETL vs ELT - Snowflake](https://www.snowflake.com/guides/etl-vs-elt/)
-- [ETL vs ELT - AWS](https://aws.amazon.com/ko/compare/the-difference-between-etl-and-elt/)
