--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,22 +23,22 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 📄 최근 글
 
 <div className="recent-posts">
+  <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">변경 데이터 캡처(CDC)</div>
+      <div className="recent-post-meta">2025년 5월 21일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        변경 데이터 캡처(CDC)의 핵심 개념, 작동 방식, 활용 사례, 장단점, 운영 고려사항을 알아봅니다.
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
   <a className="recent-post" href="/de-wiki/etl_vs_elt/">
     <div className="recent-post-content">
       <div className="recent-post-title">느린 변경 차원(SCD)</div>
       <div className="recent-post-meta">2025년 5월 20일 · Data Engineering</div>
       <div className="recent-post-desc">
         느린 변경 차원(SCD)의 핵심 개념, 다양한 유형(Type 0, 1, 2, 3, 4, 5, 6, 7), 장단점, 선택 기준, 그리고 실제 활용 사례까지 심층적으로 알아봅니다.
-      </div>
-      <div className="recent-post-action">글 읽기 →</div>
-    </div>
-  </a>
-  <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
-    <div className="recent-post-content">
-      <div className="recent-post-title">SQL 윈도우 함수</div>
-      <div className="recent-post-meta">2025년 5월 19일 · Data Engineering</div>
-      <div className="recent-post-desc">
-        SQL 윈도우 함수의 핵심 개념, 주요 함수 유형과 활용법, 그리고 성능을 고려한 사용 전략까지 상세히 안내합니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
