--- a/src/content/docs/de-wiki/dqm.mdx
+++ b/src/content/docs/de-wiki/dqm.mdx
@@ -1,6 +1,6 @@
 ---
 title: '데이터 품질 관리(DQM)'
-description: '데이터 품질 관리의 중요성, 핵심 요소, 관리 프로세스 및 대상, 그리고 성공적인 데이터 품질 관리를 위한 전략과 최신 기술 동향까지 살펴봅니다.'
+description: '데이터 품질 관리의 핵심 개념, 프로세스, 성공 전략을 통해 비즈니스 가치를 극대화하는 방법을 알아봅니다.'
 head:
   - tag: meta
     attrs:
