--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,22 +23,22 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 📄 최근 글
 
 <div className="recent-posts">
+  <a className="recent-post" href="/de-wiki/dqm/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">데이터 품질 관리(DQM)</div>
+      <div className="recent-post-meta">2025년 5월 26일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        데이터 품질 관리의 핵심 개념, 프로세스, 성공 전략을 통해 비즈니스 가치를 극대화하는 방법을 알아봅니다.
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
   <a className="recent-post" href="/de-wiki/normalization_denormalization_guide/">
     <div className="recent-post-content">
       <div className="recent-post-title">변경 데이터 캡처(CDC)</div>
       <div className="recent-post-meta">2025년 5월 21일 · Data Engineering</div>
       <div className="recent-post-desc">
         변경 데이터 캡처(CDC)의 핵심 개념, 작동 방식, 활용 사례, 장단점, 운영 고려사항을 알아봅니다.
-      </div>
-      <div className="recent-post-action">글 읽기 →</div>
-    </div>
-  </a>
-  <a className="recent-post" href="/de-wiki/etl_vs_elt/">
-    <div className="recent-post-content">
-      <div className="recent-post-title">느린 변경 차원(SCD)</div>
-      <div className="recent-post-meta">2025년 5월 20일 · Data Engineering</div>
-      <div className="recent-post-desc">
-        느린 변경 차원(SCD)의 핵심 개념, 다양한 유형(Type 0, 1, 2, 3, 4, 5, 6, 7), 장단점, 선택 기준, 그리고 실제 활용 사례까지 심층적으로 알아봅니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
