--- a/src/content/docs/de-wiki/etl_vs_elt.mdx
+++ b/src/content/docs/de-wiki/etl_vs_elt.mdx
@@ -14,50 +14,76 @@ import ReadingTimeInfo from '../../../components/ReadingTimeInfo.astro';
 <ReadingTimeInfo minutesRead="5 min read" date="2025-05-14"/>
 
 :::tip[핵심 요약]
-**ETL**(추출, 변환, 적재)과 **ELT**(추출, 적재, 변환)는 데이터 처리의 두 가지 핵심 접근법입니다. ETL은 데이터를 정제 후 저장하는 전통적 방식이며, ELT는 원본 데이터를 먼저 저장하고 필요시 변환하는 현대적 방식으로, 각각 유연성, 비용, 성능 면에서 장단점을 가집니다. 이 글은 두 방식의 차이를 상세히 비교하고 상황별 최적의 선택을 돕습니다.
+데이터 처리는 크게 **ETL**(추출, 변환, 적재)과 **ELT**(추출, 적재, 변환) 두 가지 핵심 접근법이 있습니다.
+
+ETL은 데이터를 정제 후 저장하는 전통적 방식이며, ELT는 원본 데이터를 먼저 저장하고 필요시 변환하는 현대적 방식으로, 각각 유연성, 비용, 성능 면에서 장단점을 가집니다.
+
+이 글은 두 방식의 차이를 상세히 비교하고 상황별 최적의 선택을 돕습니다.
 :::
 
 ![ETL과 ELT 프로세스 흐름](/images/etl-elt-flow.png)
 
-데이터 처리 방식의 두 가지 주요 접근법인 **ETL**(추출, 변환, 적재)과 **ELT**(추출, 적재, 변환)는 단순히 작업 순서만 다른 것이 아닙니다. 이 차이는 데이터 아키텍처, 비용 구조, 데이터 처리 유연성, 그리고 미래 확장성까지 큰 영향을 미치며, 데이터 활용 전략의 근본적인 변화를 나타냅니다.
+데이터 처리 방식의 두 가지 주요 접근법인 **ETL**(추출, 변환, 적재)과 **ELT**(추출, 적재, 변환)는 단순히 작업 순서가 바뀐 것이라고 생각하기 쉽습니다.
+
+하지만 이 차이는 데이터 아키텍처, 비용 구조, 데이터 처리 유연성, 그리고 미래 확장성까지 광범위한 영향을 미치며, 데이터 활용 전략의 근본적인 변화를 나타냅니다.
 
 이 글에서는 ETL과 ELT의 본질적인 차이점을 이해하고, 각 방식의 장단점과 적합한 사용 사례를 비교하여 상황에 맞는 최적의 데이터 처리 전략을 선택하는 데 도움을 드리고자 합니다.
 
 ## ETL (Extract, Transform, Load)
 
-ETL은 다양한 데이터 소스에서 필요한 데이터를 추출(Extract)하고, 별도의 **준비 환경(Staging Area)** 에서 정해진 규칙에 따라 데이터를 변환(Transform)한 후, 최종적으로 **데이터 웨어하우스(Data Warehouse)** 에 적재(Load)하는 전통적인 방식입니다.
+ETL은 다양한 데이터 소스에서 필요한 데이터를 **추출(Extract)** 하고, 별도의 준비 환경(Staging Area)에서 정해진 규칙에 따라 데이터를 **변환(Transform)** 한 후, 최종적으로 데이터 웨어하우스(Data Warehouse)에 **적재(Load)** 하는 전통적인 방식입니다.
 
-1970년대부터 사용된 이 방식은 **온프레미스(On-premise) 환경**에서 표준으로 자리 잡았습니다. 당시에는 스토리지 비용이 높았기 때문에, 필요한 데이터만 정제하고 가공하여 저장하는 ETL 방식이 비용 효율적이었습니다.
+1970년대부터 사용된 이 방식은 **온프레미스(On-premise) 환경**에서 표준으로 자리 잡았습니다.
+
+당시에는 스토리지 비용이 지금에 비해 상대적으로 높았기 때문에 필요한 데이터만 정제하고 가공하여 저장하는 ETL 방식이 효율적이었습니다.
 
 ### ETL의 장점
 
-*   **데이터 품질 및 규정 준수 용이**: 데이터를 적재하기 전에 변환 과정을 거치므로, 데이터 품질을 표준화하고, 오류를 수정하며, **개인 식별 정보(PII)** 를 마스킹하는 등 보안 및 규제 요구사항을 사전에 충족하기 유리합니다.
-*   **분석 성능 최적화**: 이미 변환 및 정제된 데이터가 데이터 웨어하우스에 저장되므로, 분석 쿼리 실행 시 빠른 성능을 기대할 수 있습니다.
+ETL 방식은 데이터를 적재하기 전에 변환 과정을 거치므로, 데이터 품질을 표준화하고, 오류를 수정하며, **개인 식별 정보(PII)** 를 마스킹하는 등 보안 및 규제 요구사항을 사전에 충족하기 유리하다는 장점이 있습니다.
+
+예를 들어 내부 정책 상 사용자의 이메일 번호는 개인정보에 해당해 데이터 웨어하우스에 적재할 수 없는 경우, 데이터 웨어하우스에 적재하기 전에 이메일 번호를 마스킹하여 보안 및 규제 요구사항을 충족할 수 있습니다.
+
+또한 이미 변환 및 정재가 되어있는 데이터가 데이터 웨어하우스에 저장되므로, 분석 쿼리 실행 시 비교적 빠른 성능을 기대할 수 있습니다.
 
 ### ETL의 한계점
 
-*   **유연성 부족**: 변환 과정에서 현재 필요 없다고 판단된 데이터는 제거될 수 있습니다. 추후 이 데이터가 중요해지면, 원본 소스에서 다시 데이터를 추출하고 전체 파이프라인을 재구성해야 하는 번거로움이 있습니다.
-*   **초기 적재 시간 소요**: 데이터를 적재하기 전에 변환 과정을 거쳐야 하므로, ELT 방식에 비해 초기 데이터 적재까지 시간이 더 오래 걸릴 수 있습니다.
-*   **새로운 데이터 요구사항 대응 어려움**: 사전에 정의된 변환 규칙을 변경하기 어렵고, 변환 과정에서 유실된 원본 데이터에는 접근할 수 없어 새로운 비즈니스 인사이트 발굴에 제약이 따를 수 있습니다.
+하지만 ETL 방식은 유연성이 부족하다는 명확한 한계점이 있습니다.
+
+예를 들어 웹사이트 로그 데이터에서 사용자 행동 분석을 위해 `페이지 URL`, `방문 시간`, `사용자 ID`만을 추출하여 데이터 웨어하우스에 적재했다고 가정해 보겠습니다.
+
+당시에는 `사용자 접속 IP 주소`는 불필요하다고 판단하여 변환 과정에서 제외했었습니다. 그러나 몇 달 후, **특정 지역별 사용자 접속 패턴을 분석**해야 하는 새로운 비즈니스 요구사항이 생겼습니다.
+
+그러나 ETL 방식에서는 이미 IP 주소 정보가 변환 과정에서 유실되었기 때문에, 원본 로그 데이터부터 다시 추출하고, 변환 로직을 수정하여 전체 파이프라인을 재구성해야 하는 번거로움이 발생하게 됩니다.
+
+그리고 데이터를 적재하기 전에 변환 과정을 거쳐야 하므로, 추후 후술할 ELT 방식에 비해 초기 데이터 적재 시간이 상대적으로 오래 걸릴 수 있습니다.
 
 ## ELT (Extract, Load, Transform)
 
-ELT는 데이터 소스에서 데이터를 추출(Extract)한 후, 원본 형태 그대로 **데이터 레이크(Data Lake)** 나 **클라우드 데이터 웨어하우스**에 우선 적재(Load)합니다. 이후 필요에 따라 다양한 분석 목적에 맞게 데이터를 변환(Transform)하여 사용하는 최신 접근 방식입니다.
+ELT는 데이터 소스에서 데이터를 **추출(Extract)** 한 후, 원본 형태 그대로 데이터 레이크(Data Lake) 나 클라우드 데이터 웨어하우스에 **적재(Load)** 합니다.
 
-ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니다. 클라우드 환경은 저렴한 스토리지 비용과 강력한 병렬 처리 및 컴퓨팅 성능을 제공하여, 대량의 원본 데이터를 일단 저장하고 필요시 빠르게 변환하는 ELT 방식을 실현 가능하게 했습니다.
+이후 필요에 따라 다양한 분석 목적에 맞게 데이터를 **변환(Transform)** 하여 사용하는 최신 접근 방식입니다.
+
+ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니다.
+
+클라우드 기술이 발전하며 스토리지 비용이 점차 저렴해졌고, 강력한 병렬 처리 및 컴퓨팅 성능을 제공하기 시작했습니다. 
+
+이러한 환경이 만들어지자 대량의 원본 데이터를 일단 저장하고 필요할 때 빠르게 변환하여 사용하자는 ELT 방식이 등장하게 되었습니다.
 
 ### ELT의 장점
 
-*   **최고 수준의 유연성**: 원본 데이터를 모두 보관하므로, 비즈니스 요구사항이나 분석 목표가 변경되더라도 전체 파이프라인을 재구축할 필요 없이 신속하게 대응할 수 있습니다. 미래에 어떤 데이터가 중요해질지 예측할 수 없는 상황에 매우 유리합니다.
-*   **다양한 데이터 유형 처리**: 정형 데이터뿐만 아니라 `JSON`, `XML`, 이미지, 텍스트 등 반정형 데이터, 비정형 데이터도 일단 적재한 후 다양한 방식으로 처리할 수 있습니다.
-*   **빠른 데이터 적재**: 변환 과정을 거치지 않고 데이터를 우선 적재하므로, 원본 데이터를 빠르게 시스템에서 활용 가능하게 만들 수 있습니다.
-*   **분석가의 데이터 접근성 향상**: 분석가나 **데이터 사이언티스트**가 직접 원본 데이터에 접근하여 필요한 형태로 자유롭게 가공하고 실험해 볼 수 있는 환경을 제공합니다.
+ELT 방식은 데이터를 적재하기 전에 변환 과정을 거치지 않고 데이터를 우선 적재하므로 최고 수준의 유연성함을 발휘할 수 있다는 장점이 있습니다.
+
+ETL 방식에서 예를 들었던 상황에서 다시 데이터 파이프라인을 재구성하지 않아도 된다는 의미이죠.
+
+또한 정형 데이터 처리에 주로 초점을 맞추는 ETL 방식과 달리, ELT 방식은 `JSON`, `XML`과 같은 반정형 데이터는 물론, 이미지나 텍스트 파일 같은 비정형 데이터도 원본 형태 그대로 데이터 레이크나 스테이징 영역에 우선 **적재** 한 후, 데이터 웨어하우스의 기능을 활용해 필요시 **변환**하여 분석에 활용할 수 있습니다.
 
 ### ELT의 고려사항
 
-*   **데이터 거버넌스 및 보안**: 원본 데이터를 먼저 적재하므로, 데이터 웨어하우스 내 접근 제어, 컬럼 레벨 보안, 동적 데이터 마스킹 등의 기능을 활용하여 데이터 품질, 거버넌스 및 개인정보보호 규정을 철저히 관리해야 합니다.
-*   **변환 시 컴퓨팅 비용**: 데이터 웨어하우스 내부에서 변환 작업이 수행되므로, 사용한 컴퓨팅 자원에 따라 비용이 발생할 수 있습니다. 변환 로직이 복잡하거나 데이터 양이 매우 클 경우 비용이 증가할 수 있습니다.
-*   **데이터 모델링의 중요성**: 데이터 모델링에 대한 이해 없이 무분별하게 데이터를 적재하면, 추후 변환 과정이 매우 복잡해지고 비효율적일 수 있습니다. `dbt (data build tool)`와 같은 도구를 활용하여 데이터 웨어하우스 내 변환 로직을 체계적으로 모델링하고 관리하는 것이 중요합니다.
+하지만 ELT 방식 역시 꼭 고려해야하는 몇 가지 사항들이 있습니다.
+
+ELT 방식은 원본 데이터를 바로 적재하므로 데이터 웨어하우스 내 접근 제어, 동적 데이터 마스킹(DDM), 컬럼 레벨 보안 등의 기능을 활용하여 데이터 품질, 거버넌스 및 개인정보보호 규정을 철저히 관리해야 합니다.
+
+또한 일반적으로 데이터 웨어하우스 내부에서 변환 작업이 수행되므로, 사용한 컴퓨팅 자원에 따라 비용이 발생할 수 있습니다. 따라서 변환 로직이 복잡하거나 데이터 양이 매우 클 경우 비용이 증가할 수 있습니다.
 
 ## 주요 항목별 비교: ETL vs ELT
 
@@ -126,6 +152,8 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
 
 ## 어떤 방식을 선택해야 할까요?
 
+아래의 시나리오를 참고하여 어떤 방식이 우리 서비스에 적합한지 고민해 보세요.
+
 <ChoiceCardGrid>
   <div slot="choiceOne" class="choice-card etl-card">
     <div class="card-header">
@@ -155,6 +183,6 @@ ELT의 등장은 **클라우드 기술 발전**과 밀접한 관련이 있습니
 
 현실의 데이터 파이프라인은 ETL 또는 ELT 중 하나의 방식만을 고수하기보다는, 두 가지를 혼합한 **하이브리드 형태**로 구성되는 경우가 많습니다.
 
-예를 들어, 초기 데이터 수집 및 일부 정제는 ELT 방식으로 빠르게 처리하고, 특정 분석을 위한 복잡한 데이터 모델링이나 집계는 데이터 웨어하우스 내에서 추가적인 변환(Transform)을 수행하는 형태(`ELTL`)도 가능합니다.
+예를 들어, 초기 데이터 수집 및 일부 정제는 ELT 방식으로 빠르게 처리하고, 특정 분석을 위한 복잡한 데이터 모델링이나 집계는 데이터 웨어하우스 내에서 추가적인 변환을 수행하는 형태(`ELTL`)도 가능합니다.
 
 중요한 것은 특정 용어나 기술에 얽매이지 않고, **비즈니스 목표**, **데이터 특성**, 사용 가능한 **기술 스택** 및 **예산** 등 구체적인 상황과 요구사항을 종합적으로 고려하여 **가장 적합한 데이터 처리 전략을 유연하게 설계하고 발전**시켜 나가는 것입니다.
