--- a/src/content/docs/de-wiki/cdc.mdx
+++ b/src/content/docs/de-wiki/cdc.mdx
@@ -1,5 +1,5 @@
 ---
-title: '변경 데이터 캡처(CDC)'
+title: '실시간 데이터 동기화의 핵심, 변경 데이터 캡처(CDC) 깊이 알기'
 description: '변경 데이터 캡처(CDC)의 핵심 개념, 작동 방식, 활용 사례, 장단점, 운영 고려사항을 알아봅니다.'
 head:
   - tag: meta
@@ -15,112 +15,135 @@ import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 <ReadingTimeInfo minutesRead="6 min read" date="2025-05-21"/>
 
 :::tip[핵심 요약]
-**변경 데이터 캡처(Change Data Capture, CDC)** 는 데이터베이스 변경 사항을 실시간으로 추적하여 다른 시스템에 전달하는 기술입니다.
+데이터베이스 변경 사항을 실시간으로 감지하고 추적하는 기술인 변경 **데이터 캡처(CDC, Change Data Capture)** 의 핵심 원리를 소개합니다.
 
-이 글에서는 CDC의 핵심 개념, 작동 방식, 다양한 활용 사례, 장단점, 실제 운영 환경에서의 고려사항까지 살펴봅니다.
+이 글에서는 CDC의 다양한 구현 방식, 장단점, 그리고 ETL과의 차이점에 대해 자세히 알아보겠습니다.
 :::
 
 ![변경 데이터 캡처(CDC)](/images/cdc.png)
 
-## 변경 데이터 캡처(CDC)란?
+## 문제 정의 (What & Why)
 
-변경 데이터 캡처(Change Data Capture, CDC)는 데이터베이스에서 발생하는 **데이터 변경(INSERT, UPDATE, DELETE 작업)** 을 식별하고 추적하여 변경 내용을 다른 시스템이나 데이터베이스로 전달하는 소프트웨어 디자인 패턴 모음을 의미합니다.
+오늘날 대부분의 서비스가 마이크로서비스 아키텍처(MSA, Microservice Architecture)를 채택하고 있으며, 실시간 데이터 처리의 중요성은 그 어느 때보다 커지고 있습니다.
 
-CDC는 주로 실시간 데이터 동기화, 효율적인 데이터 통합, 변경 이력 추적을 목적으로 합니다.
+이러한 환경에서는 **서로 다른 역할을 수행하는 여러 시스템 간에 데이터를 일관성 있게, 그리고 신속하게 유지하는 것이 핵심적인 과제**로 떠오릅니다.
 
-원본 데이터베이스의 변경 사항을 거의 실시간으로 다른 시스템에 전달하여 여러 시스템을 동시에 운영하거나 백업 및 재해 복구 시스템(Disaster Recovery System, DRS) 구축에 유용합니다.
+단적인 예로, 고객이 온라인 쇼핑몰에서 주문을 완료하는 상황을 생각해 볼 수 있습니다. 이 '주문 완료'라는 하나의 사건은 단순히 주문 정보가 데이터베이스에 기록되는 것에서 그쳐선 안됩니다.
 
-또한, CDC는 추출, 변환, 적재(Extract, Transform, Load, ETL) 프로세스의 효율성을 높여 데이터 웨어하우스나 데이터 레이크 구축 시 변경된 데이터만 식별 및 처리함으로써 전체 데이터를 주기적으로 읽는 방식보다 훨씬 효율적이며, 데이터 변경 이력을 쉽게 추적하게 하여 감사 요구사항 대응이나 특정 시점의 데이터 상태 파악에도 도움을 줍니다.
+해당 정보는 즉시 물류 시스템으로 전달되어 배송 준비를 시작해야 하고, 고객에게는 주문 확인 알림이 발송되어야 하며, 동시에 데이터 분석 플랫폼에서는 실시간 판매 현황을 집계해야 합니다.
 
-## CDC 작동 방식
+만약 이 과정에서 데이터 동기화가 지연되거나 누락된다면 고객 경험 저하는 물론 운영 효율성에도 심각한 문제를 야기할 수 있습니다.
 
-CDC는 일반적으로 다음 절차로 동작합니다.
+이처럼 **여러 시스템에 걸쳐 데이터 변경 사항을 안정적으로, 그리고 실시간으로 전파해야 하는 복잡한 요구사항을 효과적으로 해결하기 위한 기술이 바로 `변경 데이터 캡처(CDC, Change Data Capture)`** 입니다.
 
-원본 데이터베이스에서 트랜잭션으로 데이터가 변경(INSERT, UPDATE, DELETE)되면, CDC 시스템의 **캡처(Capture) 프로세스**가 해당 변경 사항을 식별하고 추출합니다.
+## 변경 데이터 캡처(CDC)란 무엇인가?
 
-이렇게 추출된 변경 데이터는 대상 시스템으로 전송되어, 해당 시스템의 CDC 엔진 또는 관련 프로세스에 의해 최종적으로 반영됩니다.
+**변경 데이터 캡처(CDC, Change Data Capture)** 는 데이터베이스에서 데이터가 새로 `생성(INSERT)`, `수정(UPDATE)`, 또는 `삭제(DELETE)`될 때 이러한 변경 사항을 식별하고 추적하여, 다른 시스템이나 프로세스가 이 변경 내역을 활용할 수 있도록 하는 기술적 방법론 또는 패턴의 집합입니다.
 
-CDC를 구현하는 주요 기법에는 여러 가지가 있습니다.
+쉽게는 데이터베이스의 변경 내역을 실시간으로 구독하는 알람 시스템이라고 이해하면 좋을 것 같습니다.
 
-### 새로고침(Refresh) 기법
+이렇게 캡처된 변경 데이터는 `실시간 데이터 복제`, `데이터 통합`, `백업 및 재해 복구 시스템 구축`, `비즈니스 인텔리전스(BI, Business Intelligence) 분석을 위한 실시간 데이터 공급`, `데이터 레이크로의 데이터 전송` 등 다양한 목적으로 활용됩니다.
 
-전체 데이터를 주기적으로 다시 로드하는 가장 단순한 방식입니다.<br/>구현은 쉽지만, 데이터 변경이 잦거나 양이 많으면 시스템 부하와 비용이 크고 실시간성이 떨어지는 단점이 있어 주로 초기 데이터 적재 시 사용합니다.
+## CDC의 주요 구현 방식
 
-**타임스탬프 기반(Timestamp-based) 기법**은 테이블에 '마지막 수정일시'와 같은 타임스탬프 컬럼을 두고, 이 값을 비교하여 변경된 데이터를 식별합니다.<br/>구현은 간단하지만, 삭제된 데이터를 감지하기 어렵고 변경 이력을 상세히 관리하는 데 한계가 있습니다.
+CDC를 구현하는 방식에는 여러 가지가 있으며, 당연하게도 각 방식마다 장단점이 존재합니다.
 
-**변경 로직(Application-level / Trigger-based) 기법**은 두 가지로 나뉩니다.
-<br/>첫째, **애플리케이션 레벨**에서는 운영 프로그램 코드 안에 데이터 변경 시 이벤트를 발행하는 로직을 직접 구현합니다.<br/>이는 유연성은 높지만, 개발 및 유지보수가 어렵고 개발자 실수로 이벤트가 누락될 위험이 있습니다.
-<br/>둘째, **트리거 기반** 방식은 데이터베이스 테이블에 INSERT, UPDATE, DELETE 이벤트 발생 시 실행되는 트리거를 생성하여 변경 내용을 별도의 로그 테이블에 기록합니다.<br/>비교적 구현은 쉽지만, 원본 테이블 작업마다 트리거가 실행되어 데이터베이스 성능에 부하를 줄 수 있습니다.
+### 타임스탬프(Timestamp) 기반 방식
 
-**트랜잭션 로그 캡처(Log-based) 기법**은 데이터베이스 시스템이 내부적으로 생성하는 트랜잭션 로그(예: Oracle Redo Log, MySQL Binlog, PostgreSQL WAL(Write-Ahead Logging))를 분석하여 변경된 데이터를 추출합니다.<br/>이 방식은 운영 데이터베이스의 성능 영향을 최소화하면서 모든 변경 사항을 안정적으로 감지할 수 있어 실시간 처리에 가장 적합합니다.<br/>**최근에는 일반적으로 이 로그 기반 방식을 CDC라고 지칭합니다.**
+테이블에 `LAST_UPDATED_AT`과 같은 마지막 수정 시간을 기록하는 컬럼을 두고, 특정 시간 이후에 변경된 데이터를 주기적으로 조회하여 변경 사항을 식별하는 방식입니다.
 
-## CDC 활용 사례
+구현이 비교적 간단하지만 데이터 `삭제(DELETE)`를 감지하기 어렵고 변경이 매우 빈번한 경우 일부 변경을 놓칠 수 있으며, 실시간성이 떨어지는 단점이 있어 최근에는 잘 사용되지 않습니다.
 
-CDC는 다양한 상황에서 유용하게 활용될 수 있습니다.
-<br/>예를 들어, 지리적으로 떨어진 여러 시스템 간 데이터를 실시간으로 동기화하여 **실시간 원격 시스템을 동시에 운영**하고 일관된 서비스를 제공하는 데 사용됩니다.<br/>또한, 원본 데이터베이스 변경 사항을 실시간으로 백업 시스템에 복제하여 장애 발생 시 신속한 복구를 돕는 **백업 및 재해 복구 시스템(DRS) 구축**에도 효과적입니다.
-<br/>운영 시스템 데이터를 분석 시스템이나 데이터 레이크로 실시간 또는 준실시간으로 통합하여 최신 데이터 기반 분석을 수행하는 **데이터 분석(Business Intelligence, BI, 비즈니스 인텔리전스) 및 데이터 레이크 구축**에도 활용됩니다.<br/>뿐만 아니라, Apache Kafka와 같은 메시징 큐와 연동하여 변경 데이터를 스트림 형태로 발행하고 다양한 애플리케이션에서 이를 구독하여 활용하는 **실시간 데이터 스트리밍 파이프라인 구축**도 가능합니다.<br/>마지막으로, **마이크로서비스 아키텍처(MicroService Architecture, MSA) 환경**에서는 서비스 간 데이터 동기화를 유지하거나, 특정 데이터 변경을 이벤트로 간주하여 다른 서비스 동작을 유도하는 이벤트 기반 아키텍처 구현에 기여합니다.
+### 데이터베이스 트리거(Trigger) 기반 방식
 
-## CDC 도입 전 확인할 점
+데이터베이스 테이블에 `INSERT`, `UPDATE`, `DELETE` 작업이 발생할 때마다 자동으로 실행되는 트리거를 설정합니다.
 
-CDC를 성공적으로 도입하고 운영하려면, 다음 주요 사항들을 꼼꼼히 살펴봐야 합니다.
+이 트리거는 변경된 데이터의 내역을 별도의 `변경 이력 테이블` 같은 곳에 기록합니다.
 
-### 기술적 고려사항
+데이터베이스 트리거 기반 방식은 변경 사항을 놓치지 않고 비교적 정확하게 잡아낼 수 있지만, 모든 테이블에 트리거를 생성하고 관리해야 하는 부담이 있습니다.
 
-CDC 도입 시 몇 가지 기술적 사항을 반드시 확인해야 합니다.
-<br/>첫째, **`NOLOGGING` 옵션 사용 여부**입니다. 대량 데이터 작업 시 `NOLOGGING` 또는 이와 유사한 옵션을 사용하면 변경 사항이 트랜잭션 로그에 남지 않아 CDC로 캡처할 수 없으므로, 이 경우 전체 데이터를 다시 동기화하는 것이 더 나을 수 있습니다.
-<br/>둘째, **대용량 데이터 처리 성능 확보 방안**입니다. 데이터 변경이 매우 빈번하다면 CDC 파이프라인이 이를 충분히 빠르게 처리할 수 있도록 성능을 확보해야 하며, 예를 들어 읽기 전용 테이블과 쓰기 전용 테이블을 분리하는 아키텍처 변경도 고려해 볼 수 있습니다.
-<br/>셋째, **스키마 변경에 대한 대응책 마련**입니다. 원본 테이블 구조(테이블명, 컬럼명, 데이터 타입 등) 변경 시 CDC 시스템이 이를 인지하고 올바르게 대응하도록 준비해야 합니다. 많은 CDC 솔루션이 스키마 변경을 자동 감지 및 전파하지만, 꼼꼼한 설정과 테스트는 필수적입니다.
-<br/>넷째, **암호화된 데이터 처리 방안**입니다. 원본 데이터베이스의 데이터가 암호화되어 있다면, 대상 시스템에서 이 데이터를 어떻게 복호화할지 또는 복호화 필요 여부를 미리 결정해야 합니다.
-<br/>다섯째, **추가 로깅(Supplemental Logging) 설정 검토**입니다. 로그 기반 CDC를 사용하려면 데이터베이스 설정을 변경하여 변경된 행의 특정 컬럼 값들을 트랜잭션 로그에 추가로 기록해야 할 수 있습니다. 이 설정은 로그 파일 크기를 늘릴 수 있으므로 저장 공간과 성능에 미치는 영향을 미리 확인해야 합니다.
-<br/>여섯째, **양방향 동기화의 복잡성 인지**입니다. 두 개 이상 시스템이 서로의 변경 사항을 주고받는 양방향 CDC 구성은 데이터 충돌(Conflict)이나 일관성 문제(Dirty Read 등)를 일으킬 수 있으므로, 매우 신중하게 설계하고 충분히 테스트해야 합니다.
+또한, 트리거가 운영 데이터베이스 내에서 직접 동작하므로 데이터베이스 자체에 부하를 줄 수 있다는 단점이 있습니다.
 
-### CDC 도입 장점
+### 트랜잭션 로그(Transaction Log) 스캐닝 방식
 
-CDC를 도입하면 여러 가지 이점을 얻을 수 있습니다.
-<br/>먼저, 데이터베이스 테이블 변경 사항(INSERT, UPDATE, DELETE)을 쉽게 추적할 수 있어 **변경 이력 추적이 용이**하며, 이는 데이터 복제나 감사 요건 충족에 매우 유리합니다.<br/>또한, 데이터 변경을 실시간으로 감지하여 추출, 변환, 적재(ETL) 작업 없이도 데이터를 즉시 동기화하는 **실시간 데이터 통합**이 가능해집니다. 이를 통해 데이터 웨어하우스나 분석 시스템에 항상 최신 데이터를 제공할 수 있습니다.<br/>그리고 CDC는 데이터베이스 단에서 작동하므로, 데이터 변경을 추적하기 위해 운영 중인 애플리케이션 코드를 거의 수정할 필요 없어 **기존 시스템 변경을 최소화**하면서 새로운 기능을 도입할 수 있다는 장점이 있습니다.<br/>마지막으로, 변경된 데이터만 선별적으로 추출하므로 전체 데이터를 주기적으로 읽는 방식보다 훨씬 **효율적인 데이터 전송**이 가능하며, 이는 네트워크 대역폭과 시스템 자원 절약으로 이어집니다.
+트랜잭션 로그 스캐닝 방식은 현재 가장 널리 사용되는 방식입니다.
 
-### CDC 도입 시 예상 어려움
+대부분의 데이터베이스 시스템이 내부적으로 모든 데이터 변경 작업의 내역을 순서대로 기록하는 트랜잭션 로그 파일(`MySQL`의 `바이너리 로그(binlog)`, `PostgreSQL`의 `WAL(Write-Ahead Log)`)이 존재하는데요, 이 파일을 직접 읽어 변경 사항을 분석하는 방식입니다.
 
-CDC 도입 시 몇 가지 어려움이 발생할 수 있습니다.
-<br/>첫째, 트랜잭션 로그를 읽는 과정에서 데이터베이스 **성능에 영향**을 줄 가능성이 있습니다. 특히 트랜잭션 로그 파일 크기가 증가하거나 입출력(Input/Output, I/O) 작업이 늘어날 수 있습니다.
-<br/>둘째, 변경 데이터를 기록하기 위한 별도의 로그 테이블이나 늘어난 트랜잭션 로그로 인해 **추가 저장 공간이 필요**할 수 있습니다.
-<br/>셋째, CDC 솔루션 자체의 구성, 모니터링, 장애 대응 등 새로운 운영 관리 요소가 추가되어 **운영 관리 부담이 증가**할 수 있습니다.
-<br/>넷째, 데이터를 캡처하고 전송하여 반영하는 과정에서 약간의 지연(Latency)이 발생할 수 있으므로 **완벽한 실시간성에는 한계**가 있을 수 있습니다. 아주 짧은 시간(밀리초 단위)의 동기화가 반드시 필요한 시스템에는 적합하지 않을 수 있다는 점을 고려해야 합니다.
+이 방식은 운영 데이터베이스에 직접적인 조회 부하를 거의 주지 않으면서, 삭제된 내용을 포함한 모든 변경 사항을 안정적으로 감지할 수 있습니다.
 
-## 주요 오픈소스 CDC 솔루션
+또한 개발자의 실수로 관련 로직이 누락될 걱정도 없으며, 변경 사항이 즉시 기록되므로 실시간 처리에 가장 유리합니다.
 
-다양한 오픈소스 CDC 솔루션이 있으며, 각 솔루션은 서로 다른 특징과 지원 데이터베이스를 가집니다.
+대표적으로 `Debezium`과 같은 오픈소스 CDC 도구들이 이 방식을 활용하여 다양한 데이터베이스의 변경 로그를 읽고, 이를 변경 이벤트로 만들어 `Apache Kafka`와 같은 메시지 큐 시스템으로 전달합니다.
 
-**Debezium**은 레드햇(RedHat)이 지원하는 Apache Kafka 기반의 분산 CDC 플랫폼입니다.<br/>MySQL, PostgreSQL, MongoDB, Oracle, SQL Server 등 다양한 데이터베이스를 지원하며, 데이터베이스 트랜잭션 로그를 읽어 변경 이벤트를 Kafka 토픽으로 발행합니다.<br/>유연성과 확장성이 뛰어나 널리 사용됩니다.
+그러면 다른 마이크로서비스나 데이터 파이프라인이 이 `Kafka` 토픽을 구독하여 변경된 데이터를 실시간으로 소비할 수 있습니다.
 
-**Maxwell's Daemon**은 MySQL 바이너리 로그(binlog)를 실시간으로 읽어 변경된 데이터를 JSON 형태로 표준 출력(stdout)으로 내보내는 간단한 데몬입니다.<br/>특정 애플리케이션이나 메시징 시스템으로 데이터를 쉽게 전달할 수 있는 경량 솔루션입니다.
+## CDC 도입의 핵심적인 이유
 
-**Canal**은 알리바바(Alibaba)가 개발한 MySQL 및 MariaDB용 CDC 도구입니다.<br/>MySQL binlog를 분석하여 변경 데이터를 추출하며, 주로 대규모 데이터 복제 및 동기화 환경에서 사용됩니다.
+CDC를 도입하게 되는 핵심적인 이유는, 오늘날 대부분의 서비스가 단일 시스템으로 운영되기보다는 각기 다른 역할을 수행하는 여러 `마이크로서비스`, `외부 연동 시스템`, `데이터 분석 플랫폼` 등으로 복잡하게 얽혀 구성되는 경우가 많기 때문입니다.
 
-**pg\_chameleon**은 PostgreSQL 전용 CDC 솔루션으로, 특히 MySQL에서 PostgreSQL로 데이터를 실시간 복제하는 기능을 제공합니다.<br/>Python으로 작성되었으며 PostgreSQL 환경과의 통합을 목표로 합니다.
+예를 들어, 전자상거래 플랫폼에서 고객이 상품을 주문하고 결제를 완료했다고 가정해 봅시다. 
 
-**Apache NiFi**는 데이터 흐름 자동화 및 관리 도구로, `CaptureChangeMySQL` 프로세서 등을 통해 MySQL을 비롯한 일부 데이터베이스에 대한 CDC 기능을 지원합니다.
+이 `주문 완료`라는 하나의 이벤트는 단순히 주문 데이터베이스에 기록되는 것에서 끝나지 않습니다.
 
-## CDC 파이프라인 운영 핵심 지표 (Debezium 사례 중심)
+*   **실시간 알림**: 고객에게는 주문 확정 알림(이메일, SMS 등)이 즉시 발송되어야 합니다.
+*   **재고 관리**: 해당 상품의 재고는 실시간으로 차감되어 다른 고객이 품절된 상품을 주문하는 상황을 막아야 합니다.
+*   **물류 시스템 연동**: 물류팀에서는 새로운 배송 요청을 즉시 인지하고 준비를 시작해야 합니다.
+*   **데이터 분석**: 마케팅팀이나 데이터 분석팀은 실시간으로 발생하는 주문 데이터를 통해 프로모션 효과를 분석하거나 고객 행동 패턴을 파악하고 싶어 합니다.
 
-안정적이고 효율적인 CDC 파이프라인을 운영하려면 몇 가지 핵심 지표를 지속적으로 모니터링하고 관리해야 합니다. (Debezium 사용 사례를 중심으로 설명합니다)
+만약 이러한 과정에서 데이터 동기화가 지연되거나 누락된다면 어떻게 될까요? 고객은 주문 상태를 제때 알 수 없어 불안해하고, 품절된 상품이 계속 판매되어 고객 불만과 운영 비효율을 초래하며, 물류 처리가 늦어져 배송 지연이 발생할 수 있습니다.
 
-**지연 시간 (Source-to-Target Latency)**
-<br/>원본 데이터베이스 변경 발생 시점부터 최종 대상 시스템에 반영되기까지 걸리는 시간입니다.<br/>Debezium 이벤트 메시지 내 `source.ts_ms` 필드 등을 활용하여 측정하며, 허용 가능한 기준값을 넘지 않도록 관리해야 합니다.
+과거에는 이러한 문제를 해결하기 위해 각 애플리케이션(주문, 알림, 재고, 물류 등)이 변경 사항을 인지하고 `다른 시스템의 API를 직접 호출`하거나, `메시지 큐(Message Queue)`에 직접 이벤트를 발행하는 등의 추가적인 개발 부담을 져야 했습니다.
 
-**초당 이벤트 처리량 (Events Per Second / Throughput)**
-<br/>CDC 파이프라인이 초당 처리하는 변경 이벤트 수를 나타냅니다.<br/>이는 시스템 부하 상태나 성능 병목 지점을 파악하는 데 중요한 지표입니다.<br/>Debezium의 JMX(Java Management Extensions) 메트릭 등으로 모니터링할 수 있으며, 테이블별, 작업 유형별(Create, Update, Delete)로 세분화하여 측정하면 더욱 유용합니다.
+혹은 주기적으로 원본 데이터베이스를 조회하여 변경분을 가져오는 `배치(batch) 방식`을 사용했지만 이는 실시간성을 보장하기 어렵고, 운영 데이터베이스에 반복적인 조회 부하를 주어 전체 시스템 성능에 악영향을 미칠 수 있었습니다.
 
-**확장성 (CDC Pipeline Scalability)**
-<br/>비즈니스 요구사항 변화에 따라 새로운 테이블을 CDC 대상으로 추가하거나 새로운 파이프라인을 신속하게 구성할 수 있는 능력입니다.<br/>예를 들어, 대용량 테이블의 초기 데이터 적재(스냅샷) 시 `snapshot` 모드를 효율적으로 사용하거나 Apache Sqoop과 같은 도구와 연동하여 시간을 단축하는 방법을 고려할 수 있습니다.<br/>또한, 기존 파이프라인에 새로운 테이블을 동적으로 추가하는 기능을 개발하여 운영 효율성을 높일 수 있습니다.
+하지만 CDC, 특히 `트랜잭션 로그 스캐닝 방식`을 도입하므로써 이러한 복잡성과 부담을 크게 줄일 수 있습니다.
 
-**데이터 정합성 (Data Consistency)**
-<br/>CDC로 복제된 데이터가 원본 데이터와 정확히 일치하는지 검증하는 것은 매우 중요합니다.<br/>데이터 누락, 순서 바뀜, 중복과 같은 문제가 발생하지 않도록 파이프라인을 설계하고, 주기적으로 정합성을 검증하는 프로세스를 수행하는 것이 좋습니다.
+## CDC 도입 시 주의사항
 
-대규모 환경에서 CDC 파이프라인을 운영할 때는 **초기 동기화 시간**이나 **파이프라인 증가에 따른 관리 복잡성**과 같은 어려움이 발생할 수 있습니다.<br/>이러한 문제를 해결하기 위해서는 초기 적재 방식을 최적화하고 파이프라인 관리를 자동화하며 모니터링 시스템을 고도화하는 노력이 필요합니다.
+변경 데이터 캡처(CDC)는 강력한 기술이지만, 모든 기술이 그렇듯 **만병통치약**은 아닙니다.
+
+첫 번째로 **CDC 시스템의 성능 영향 및 자원 사용량을 예측 해야합니다.**
+
+CDC 솔루션 자체도 하나의 소프트웨어이므로 시스템 자원(CPU, 메모리, 네트워크 등)을 소모합니다.
+
+특히, 데이터 변경량이 매우 많은 운영 환경에서는 CDC 프로세스가 원본 데이터베이스나 연관 시스템에 예기치 않은 성능 부하를 유발할 수 있습니다.
+
+따라서 도입 전 충분한 성능 테스트를 통해 CDC 시스템이 사용할 자원량을 예측하고, 피크 타임의 부하를 견딜 수 있는지, 병목 현상이 발생하지는 않을지 등을 반드시 확인해야 합니다.
+
+두 번째로 **데이터베이스 스키마 변경 시 대응 전략을 수립 해야합니다.**
+
+운영 중인 데이터베이스의 테이블 구조나 컬럼 속성(스키마)은 비즈니스 요구사항에 따라 언제든지 변경될 수 있습니다.
+
+이때, 스키마 변경이 CDC 파이프라인에 어떤 영향을 미치는지, 변경 사항이 어떻게 자동으로 감지되고 적용되는지, 또는 수동 개입이 필요한 부분은 없는지 명확한 대응 전략과 절차를 수립해야 합니다.
+
+만약 스키마 변경에 제대로 대응하지 못하면 CDC 프로세스가 중단되거나 잘못된 데이터를 전송하여 심각한 `데이터 불일치 문제`를 야기할 수 있습니다.
+
+세 번째로 **초기 데이터 동기화(스냅샷)의 부담과 영향을 최소화하는 방안을 마련해야합니다.**
+
+CDC를 통해 실시간 변경분 스트리밍을 시작하기 전에 일반적으로 원본 데이터베이스의 전체 데이터를 복제하는 `초기 스냅샷` 과정이 필요합니다.
+
+만약 원본 데이터의 양이 방대할 경우에 이 스냅샷 과정은 상당한 시간과 시스템 자원을 소모하며, 때로는 운영 시스템의 서비스 응답성에 영향을 줄 수 있습니다.
+
+따라서 `스냅샷 작업 시간`, `시스템 부하`, `네트워크 사용량` 등을 사전에 철저히 예측하고, 서비스 영향이 적은 시간대를 선택하거나 점진적인 스냅샷 방법을 고려하는 등 그 영향을 최소화할 방안을 마련해야 합니다.
+
+마지막으로 **데이터베이스 로그 보존 정책과 CDC의 연관성을 검토 해야합니다. (로그 기반 CDC의 경우)**
+
+`트랜잭션 로그 스캐닝 방식`의 CDC는 데이터베이스의 로그 파일에 전적으로 의존합니다.
+
+만약 데이터베이스 서버의 로그 보존 기간이 너무 짧게 설정되어 있거나 로그 파일이 예기치 않게 삭제될 경우엔, CDC 시스템이 변경 사항을 제대로 읽어가지 못해 데이터 유실이 발생할 수도 있습니다.
+
+따라서 CDC 시스템의 안정적인 운영을 위해 데이터베이스 로그가 충분한 기간 동안 안전하게 보존되도록 정책을 수립하고, 정기적으로 로그 파일 관리 상태를 점검해주어야 합니다.
+
+이러한 고려사항들을 사전에 충분히 검토하고 대비책을 마련한다면, CDC 도입으로 인한 예기치 않은 문제를 최소화하고 그 효과를 극대화할 수 있을 것입니다.
+
 
 ## 결론
 
-변경 데이터 캡처(CDC)는 현대 데이터 아키텍처에서 실시간 데이터 동기화와 통합을 위한 핵심 기술입니다.<br/>특히 트랜잭션 로그 기반 CDC는 운영 시스템의 부하를 최소화하면서 신뢰성 높은 변경 데이터 추출을 가능하게 합니다.<br/>Debezium과 같이 강력한 오픈소스 솔루션의 등장으로 CDC 도입 장벽 또한 낮아지고 있습니다.
+변경 데이터 캡처(CDC)는 데이터베이스의 변경 사항을 실시간으로 추적하고 전파하는 강력한 기술입니다.
 
-성공적인 CDC 구현 및 운영을 위해서는 기술적 이해와 함께 비즈니스 요구사항, 시스템 환경, 성능 목표 등을 종합적으로 고려해야 합니다.<br/>CDC를 통해 데이터 가치를 실시간으로 활용하여 더 나은 의사결정과 향상된 서비스를 제공할 수 있을 것입니다.
+특히 트랜잭션 로그 스캐닝 방식은 운영 시스템의 부하를 최소화하면서 안정적으로 변경을 감지할 수 있어 현대적인 데이터 아키텍처에서 핵심적인 역할을 수행합니다.
+
+CDC를 통해 얻은 실시간 변경 이벤트는 단순히 데이터를 복제하는 것을 넘어, 시스템 전체를 `이벤트 기반 아키텍처(EDA, Event-Driven Architecture)`로 발전시키는 데 중요한 역할을 할 수 있습니다.
+
+이 글을 통해 CDC를 통해 데이터 가치를 실시간으로 활용하고, 더 나은 의사결정과 서비스를 제공할 수 있기를 바랍니다.
