refactoring cdc post

--- a/src/content/docs/de-wiki/cdc.mdx
+++ b/src/content/docs/de-wiki/cdc.mdx
@@ -24,9 +24,9 @@ import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 
 ## 문제 정의 (What & Why)
 
-오늘날 대부분의 서비스들이 마이크로서비스 아키텍처(MSA, Microservice Architecture)를 채택하고 있으며, 실시간 데이터 처리의 중요성이 증가하고 있습니다.
+요즘 많은 서비스들이 마이크로서비스 아키텍처(MSA, Microservice Architecture)를 채택하고 있으며, 실시간 데이터 처리의 중요성이 증가하고 있습니다.
 
-이러한 상황에서는 **다양한 역할을 맡고 있는 여러 시스템 간에 데이터를 일관성 있게, 그리고 신속하게 연동하는 것이 핵심적인 도전 과제**가 되고 있습니다.
+이러한 상황 속에서 **다양한 역할을 맡고 있는 여러 시스템 간에 데이터를 일관성 있게, 그리고 신속하게 연동하는 것이 핵심 도전 과제**가 되고 있습니다.
 
 단적인 예로, 고객이 온라인 쇼핑몰에서 주문을 완료하는 상황을 생각해 볼 수 있습니다. 이 `주문 완료`라는 하나의 사건은 단순히 주문 정보가 데이터베이스에 기록되는 것에서 그치지 않습니다.
 
