--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,22 +23,22 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 #### 📄 최근 글
 
 <div className="recent-posts">
+  <a className="recent-post" href="/flower-wiki/episode1/">
+    <div className="recent-post-content">
+      <div className="recent-post-title">나만의 꽃 도감 만들기 - 식물 데이터 수집</div>
+      <div className="recent-post-meta">2025년 6월 17일 · Data Engineering</div>
+      <div className="recent-post-desc">
+        공공데이터포털 API를 활용해 꽃 데이터를 수집하기
+      </div>
+      <div className="recent-post-action">글 읽기 →</div>
+    </div>
+  </a>
   <a className="recent-post" href="/de-wiki/distributed_systems/">
     <div className="recent-post-content">
       <div className="recent-post-title">분산 시스템에서 데이터 일관성 유지하기</div>
       <div className="recent-post-meta">2025년 6월 4일 · Data Engineering</div>
       <div className="recent-post-desc">
         분산 시스템의 핵심 과제인 데이터 일관성을 CAP 이론, 다양한 일관성 모델, 실무 적용 사례를 통해 심층적으로 탐구하고 최적의 설계 전략을 제시합니다.
-      </div>
-      <div className="recent-post-action">글 읽기 →</div>
-    </div>
-  </a>
-  <a className="recent-post" href="/de-wiki/dqm/">
-    <div className="recent-post-content">
-      <div className="recent-post-title">데이터 품질 관리(DQM)</div>
-      <div className="recent-post-meta">2025년 5월 26일 · Data Engineering</div>
-      <div className="recent-post-desc">
-        데이터 품질 관리의 핵심 개념, 프로세스, 성공 전략을 통해 비즈니스 가치를 극대화하는 방법을 알아봅니다.
       </div>
       <div className="recent-post-action">글 읽기 →</div>
     </div>
