flower-wiki 2 posted

--- a/src/content/docs/flower-wiki/episode1.mdx
+++ b/src/content/docs/flower-wiki/episode1.mdx
@@ -1,5 +1,5 @@
 ---
-title: '나만의 꽃 도감 만들기 - 식물 데이터 수집'
+title: '나만의 꽃 도감 만들기 1 - 식물 데이터 수집'
 description: '공공데이터포털 API를 활용해 꽃 데이터를 수집하기'
 head:
   - tag: meta
